
- Added: MiniXML library included in source tree for all upcoming XML needs.
- Added: initial support for XML command line parameter descriptions. Mostly
    infrastructure work to make sure XML can be generated by CommandLine
    class with minimal extra programmer involvement
- Added: cmtk::Console can now typeset text with given margin and width.
- Added: Windows implementation of mutex lock.

- Fixed: numerical instability of correlation coefficient (leading to values
    outside -1..+1, which in turn produced invalid p-values
- Fixed: legacy IGS_MOUNTPOINTS was not considered
- Fixed: principal axes registration was broken (Issue NITRC-#3743)
- Fixed: configure problem with bundled zlib, which broke compile of NrrdIO in
    Visual Studio.

- Improved: simplified code by removing HAVE_ZLIB conditionals. These are now
    always true since we're bundling zlib.
- Improved: use double instead of float for linear model and regression
- Improved: use CMake's FindOpenMP to detect and configure OpenMP
- Improved: prevent configurations where CMTK_USE_THREADS is ON but
    CMTK_BUILD_SMP is OFF.
- Improved: better integration of Doxygen into CMake build system

- Removed: cmtk::MathUtil::CoefficientOfCorrelation was removed because it
    turned out to be a redundant, numerically unstable variant of
    MathUtil::Correlation
- Removed: deprecated options -m/--metric removed from registration and warp
    tools.
- Removed: obsolete tool skeleton "detect_interleave"
- Removed: obsolete "--threads" option from all remaining command lines; using
    CMTK_NUM_THREADS environment variable is more flexible and versatile.


Release CMTK-0.2.4 (2009-05-11):

- Platforms: vastly improved compatibility with VisualStudio 2008; initial
    implementation of Windows thread parallelism
- Platforms: offer RPM package on Unix/Linux systems and NSIS/ZIP on Windows

- Build: hierarchical SMP control (not complete)

- Changed: symmetry_plane tool now named "sympl"