@@ -1,0 +1,13 @@
+! TYPEDSTREAM 1.1
+
+registration {
+	reference_study "rat_fse_erly.hdr"
+	floating_study "rat_fse_late.hdr"
+	affine_xform {
+		xlate 0.0001547393834 -0.1 -0.09999988028 
+		rotate 4.294885884e-20 -0.08865917474 2.77556087e-17 
+		scale 1 1 1 
+		shear -0 -2.168404345e-19 -0 
+		center 31.5 31.5 7.200000286 
+	}
+}
